objects/BP_Settings__c.object
<CustomObject><fields>
        <fullName>DefaultStripeCurrency__c</fullName>
        <label>Default Stripe Currency</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>IsTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Disabled</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>StripeAPIURL__c</fullName>
        <description>Stripe API URL</description>
        <label>Stripe API URL</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>StripePrivateKey__c</fullName>
        <label>Stripe Private Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>All settings for the Base Package</description><enableFeeds>false</enableFeeds><label>BP Settings</label><visibility>Protected</visibility></CustomObject>